	* Source/NSInvocation.m: Simplify by removing _argframe ivar and
	using _frame throughout to hold arguments. Fix checks for valid frame.
	* Source/callframe.m: Initialise newly created frame with zeros so
	that setting an object in an invocation should work when the
	invocation is retaining its contents.
	* configure.in: Disable ffi and warn about it.
	* configure: regenerated

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Removed some code that was doing nothing,
	and tidied a little.

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSPathUtilities.h: GSDefaultsRootForUser()
	function added.
	* Source/NSUser.m: Many alterations to do with correcting the
	file paths used to use GNUSTEP_USER_ROOT, and to get them to
	vary nicely when GSSetUserName() is called.  Added function
	GSDefaultsRootForUser() to get a defaults directory based on
	a new environment varibale, or use GNUSTEP_USER_ROOT.
	* Source/NSUserDefaults.m: Use GSDefaultsRootForUser()
	Fix a few bugs in setting up defaults database.
	Move defaults database to the Defaults subdirectory.
	* Source/Headers/GSIMap.h: Fix error in last commit.

2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([stringByExpandingTildeInPath]) fix bug in
	handling ~username/... format.
	* Headers/Foundation/GSIMap.h: GSIMapCleanMap() rewrote to empty
	the map efficiently.  Added an option to refrain from calling it
	when emptying a map that doesn't need keys and values releasing.
	* Source/GSAttributedString.m: don't clean maps on emptying.
	* Source/GSFFCallInvocation.m: ditto
	* Source/NSArchiver.m: ditto
	* Source/NSConnection.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSPortCoder.m: ditto
	* Source/NSSerializer.m: ditto
	Changes inspired by Pierre-Tves Rivaille

2002-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: support for merging types and functions etc.
	* Tools/AGSIndex.m: ditto
	* Tools/AGSOutput.h: ditto