@@ -65,7 +65,9 @@
 #endif
 #include <netdb.h>
 #include <string.h>
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #include <errno.h>
 
 // Maximum data in single I/O operation
