@@ -56,7 +56,9 @@
 # include <ndir.h>
 #endif
 
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #if HAVE_WINDOWS_H
 #  include <windows.h>
 #endif
