@@ -26,7 +26,9 @@
 
 #include <config.h>
 #include <errno.h>
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #include <base/preface.h>
 #include <Foundation/NSLock.h>
 #include <Foundation/NSException.h>
