@@ -40,7 +40,9 @@
 #include <syslog.h>
 #endif
 
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 
 #include "GSUserDefaults.h"
 
