@@ -59,7 +59,9 @@
 #endif
 #include <netdb.h>
 #include <string.h>
+#if HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #include <errno.h>
 
 /*
